Fix actions and pom